--- a/source/_posts/2019-08-01-docker.md
+++ b/source/_posts/2019-08-01-docker.md
@@ -67,7 +67,7 @@ Ctrl + P Ctrl + Q
 
 ## 登录Docker内部的Linux
 ```
-~/Library/Containers/com.docker.docker/Data/vms/0
+cd ~/Library/Containers/com.docker.docker/Data/vms/0
 screen tty
 
 vi /var/lib/docker/containers/{fullContainerId}/config.v2.json
