--- a/source/_posts/2019-07-16-mac-apps.md
+++ b/source/_posts/2019-07-16-mac-apps.md
@@ -34,7 +34,7 @@ tags:
 * Taobao Editor
 * Xcode
 * Paw
-
+* [Pandoc](https://pandoc.org/) `a universal document converter`
 
 ### 设计类
 * Axure RP 8
@@ -144,6 +144,12 @@ tags:
 * [Keystroke Pro](https://ixeau.com/apps/keystroke-pro/) `按键记录`
 * [AndroidFileTransfer](https://dl.google.com/dl/androidjumper/mtp/5071136/AndroidFileTransfer.dmg) `Google官方Android传文件`
 * BitBar
+
+
+### 下载站点
+[俄罗斯 - TNT Team](https://appstorrent.ru/)
+[XClient](https://xcient.info)
+
 
 
 ### Windows
